
  - Drop old no longer used CopyDocumentsToRemoteClient functionality.
  - Enable Drag'n'drop upload for tasks.
  - Rework Task-Transition controller guards.
  - Replace modify-deadline and delegate actions with a task transition.
  - Display icon on task overview when task is overdue.
  - Add task-type to searchable text.
  - Improve Task-Form styling and Usability


- Actor [phgross, deiferni]:

  - Add Actor to handle entities collaborating with tasks.
  - Actors can be one of the following:

    - User (OGDS or Plone)
    - Inbox
    - Contact
    - NullActor


- Test Refactoring [phgross, deiferni]:

  - Replace some mock-tests with functional tests.
  - Add sql-builders.
  - Add meta-builder for test-fixtures.
  - Setup default fixture for all functional tests.


- Migration [phgross, deiferni]:

  - Add `SchemaMigration` base class for sql-database migrations.
  - Add db-migration for recent changes to `opengever.ogds.models`.
  - Add db-migration for changes to `opengever.globalindex`.


- Additional Improvements:

  - Simplify LaTex listing adapters and include base-class.
    [phgross, deiferni]

  - Remove `ClientId` viewlet.
    [phgross, deiferni]

  - Remove `GlobalindexMaintenanceView` and `OpengeverView`.
    [phgross, deiferni]

  - Improve responsive design.
    [phgross, deiferni]

  - Display user-name in personal overview title.
    [phgross, deiferni]

  - Use correct content-type when returning 'OK' responses.
    [phgross, deiferni]

  - Sort groupmembers by label for groupmembers list.
    [phgross, deiferni]

  - Use ftw.profilehook instead of custom import steps.
    [phgross, deiferni]

  - Add contact-service for local contacts.
    [phgross, deiferni]

  - Refactor tree portlet.

      - Performance improvements.
      - Use JavaScript tree API for building the tree.
      - Add repository favorites.

    [jone]

  - Update DocProperties when documents are moved/pasted and checked-in/checked out.